# horizon

./: .coveragerc  .dockerignore  .env.docker  .env.local  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  .spdx-license-header.txt  CONTRIBUTING.rst  LICENSE.txt  Makefile  README.rst  SECURITY.rst  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
.github/workflows/: automerge.yml  changelog.yml  codeql-analysis.yml  dev-release.yaml  docker-image.yml  image-release.yml  image_release.yml  release.yml  repo-labels-sync.yml  test.yml
docker/: Dockerfile.backend  Dockerfile.ldap  Dockerfile.test  entrypoint.sh
docs/: conf.py  index.rst  robots.txt
docs/_static/: custom.css  openapi.json  redoc.html  stats.prom  swagger.html
docs/backend/: architecture.rst  install.rst  openapi.rst
docs/backend/auth/: cached_ldap.rst  custom.rst  dummy.rst  index.rst  ldap.rst
docs/backend/configuration/: cors.rst  database.rst  debug.rst  index.rst  logging.rst  monitoring.rst  openapi.rst  static_files.rst
docs/backend/scripts/: index.rst  manage_admins.rst
docs/backend/settings/: auth.rst  database.rst  index.rst  server.rst
docs/changelog/: 0.0.10.rst  0.0.11.rst  0.0.12.rst  0.0.13.rst  0.0.8.rst  0.0.9.rst  0.1.0.rst  0.1.1.rst  0.1.2.rst  0.1.3.rst  0.2.0.rst  0.2.1.rst  1.0.0.rst  1.0.1.rst  1.0.2.rst  1.0.3.rst  1.1.1.rst  1.1.2.rst  index.rst
docs/changelog/next_release/: +.improvement.rst  20.improvement.rst  24.feature.rst  25.feature.rst  26.feature.rst  27.breaking.rst  29.feature.rst  31.feature.rst  36.feature.rst  37.feature.rst  42.feature.rst  45.feature.rst  46.improvement.rst  47.improvement.rst  58.bugfix.rst  60.feature.rst  61.breaking.rst  94.improvement.rst  97.improvement.rst  DOP-12454.feature.rst  DOP-12545.feature.rst
docs/client/: auth.rst  exceptions.rst  install.rst  sync.rst
docs/client/schemas/: hwm.rst  hwm_history.rst  index.rst  namespace.rst  namespace_history.rst  pagination.rst  permissions.rst  ping.rst  user.rst
docs/design/: entities.rst  permissions.rst
docs/permissions/: index.rst
horizon/: __init__.py  alembic.ini  main.py
horizon/api/: handlers.py  monitoring.py  router.py
horizon/app/: config.py  handler.py  main.py
horizon/app/api/: __init__.py  monitoring.py  router.py  schemas.py
horizon/app/db/: base.py  factory.py
horizon/app/dependencies/: __init__.py  current_user.py  stub.py
horizon/app/dto/: pagination.py  unset.py
horizon/app/exceptions/: __init__.py  auth.py  base.py  entity.py  setup.py
horizon/app/settings/: __init__.py  auth.py
horizon/app/utils/: jwt.py
horizon/backend/: __init__.py  __main__.py  alembic.ini  export_openapi_schema.py  main.py
horizon/backend/api/: handlers.py  monitoring.py  router.py
horizon/backend/db/: factory.py
horizon/backend/dependencies/: __init__.py  stub.py
horizon/backend/middlewares/: __init__.py  application_version.py  cors.py  logging.py  openapi.py  prometheus.py  request_id.py  static_files.py
horizon/backend/scripts/: manage_admins.py
horizon/backend/services/: __init__.py  current_user.py  uow.py
horizon/backend/settings/: __init__.py  auth.py  database.py  server.py
horizon/backend/utils/: __init__.py  jwt.py  slug.py
horizon/client/: base.py  sync.py
horizon/client/auth/: __init__.py  access_token.py  base.py  login_password.py  oauth2_password.py
horizon/client/client/: base.py  sync.py
horizon/commons/dto/: __init__.py  pagination.py  role.py  unset.py
horizon/commons/errors/: __init__.py  base.py  registration.py
horizon/commons/exceptions/: __init__.py  auth.py  bad_request.py  base.py  entity.py  permission.py  service.py  setup.py
horizon/commons/schemas/: __init__.py  ping.py
horizon/db/: factory.py
horizon/db/migrations/: env.py
horizon/db/mixins/: changed_by.py
horizon/db/models/: __init__.py  hwm.py  hwm_history.py  namespace.py  user.py
horizon/db/repositories/: base.py  hwm.py  hwm_history.py  namespace.py  user.py
horizon/dependencies/: __init__.py  current_user.py
horizon/middlewares/: cors.py  prometheus.py
horizon/providers/auth/: __init__.py  base.py  dummy.py
horizon/services/: __init__.py  current_user.py  uow.py
horizon/settings/: __init__.py  auth.py  database.py  jwt.py  server.py
horizon/tests/: conftest.py
horizon/tests/factories/: hwm.py  hwm_history.py  namespace.py  user.py
horizon/tests/fixtures/: alembic.py  client.py  engine.py  event_loop.py  jwt.py  session.py  settings.py
horizon/tests/test_database/: test_migrations.py  test_migrationsup_to_date.py
horizon/tests/test_unit/: test_ping.py
horizon/utils/: jwt.py
horizon_client/auth/: __init__.py  access_token.py  oauth2_password.py
horizon_client/client/: base.py  sync.py
horizon_commons/dto/: __init__.py  pagination.py
horizon_commons/errors/: __init__.py  base.py  registration.py
horizon_commons/errors/schemas/: __init__.py  already_exists.py  invalid_request.py  invalid_value.py  not_authorized.py  not_found.py
horizon_commons/exceptions/: __init__.py  auth.py  base.py  entity.py  setup.py
horizon_commons/schemas/: __init__.py  invalid_request.py  not_authorized.py  ping.py
horizon_commons/schemas/errors/: __init__.py  already_exists.py  invalid_value.py  not_found.py
horizon_commons/schemas/v1/: __init__.py  auth.py  hwm.py  hwm_history.py  namespace.py  pagination.py
tests/: __init__.py  conftest.py
tests/factories/: base.py  credentials_cache.py  hwm.py  hwm_history.py  namespace.py  namespace_history.py  permissions.py  user.py
tests/fixtures/: alembic.py  async_engine.py  async_session.py  client.py  engine.py  event_loop.py  external_app.py  jwt.py  session.py  settings.py  sync_client.py  test_app.py  test_client.py
tests/test_backend/: test_ping.py
tests/test_backend/test_auth/: test_cached_ldap_auth.py  test_dummy_auth.py  test_dummy_oauth.py  test_ldap_auth.py
tests/test_client_sync/: test_client_sync_ping.py
tests/test_database/: test_manage_admins.py  test_migrations.py
(+205 files in other folders)
